@@ -3667,11 +3667,10 @@ public class EquipmentServiceImpl implements EquipmentService {
 			}
 
 			if(QRCodeFlag.ACTIVE.equals(QRCodeFlag.fromStatus(dto.getQrCodeFlag()))) {
-				ByteArrayOutputStream out = generateQRCode(dto.getQrCodeToken());
+				ByteArrayOutputStream out = generateQRCode(Base64.encodeBase64String(dto.getQrCodeToken().getBytes()));
 				byte[] data=out.toByteArray();
-//				BASE64Encoder encoder=new BASE64Encoder();
-//				dataMap.put("qrCode", encoder.encode(data));
-				dataMap.put("qrCode", Base64.encodeBase64String(data));
+				BASE64Encoder encoder=new BASE64Encoder();
+				dataMap.put("qrCode", encoder.encode(data));
 			}
 
 			String savePath = filePath + dto.getId()+ "-" + dto.getName() + ".doc";
@@ -3700,19 +3699,18 @@ public class EquipmentServiceImpl implements EquipmentService {
 			}
 
 			if(QRCodeFlag.ACTIVE.equals(QRCodeFlag.fromStatus(dto1.getQrCodeFlag()))) {
-				ByteArrayOutputStream out = generateQRCode(dto1.getQrCodeToken());
+				ByteArrayOutputStream out = generateQRCode(Base64.encodeBase64String(dto1.getQrCodeToken().getBytes()));
 				byte[] data=out.toByteArray();
-//				BASE64Encoder encoder=new BASE64Encoder();
-//				dataMap.put("qrCode1", encoder.encode(data));
-				dataMap.put("qrCode1", Base64.encodeBase64String(data));
+				BASE64Encoder encoder=new BASE64Encoder();
+				dataMap.put("qrCode1", encoder.encode(data));
 			}
 
 			if(QRCodeFlag.ACTIVE.equals(QRCodeFlag.fromStatus(dto2.getQrCodeFlag()))) {
-				ByteArrayOutputStream out = generateQRCode(dto2.getQrCodeToken());
+				ByteArrayOutputStream out = generateQRCode(Base64.encodeBase64String(dto2.getQrCodeToken().getBytes()));
 				byte[] data=out.toByteArray();
-//				BASE64Encoder encoder=new BASE64Encoder();
-//				dataMap.put("qrCode2", encoder.encode(data));
-				dataMap.put("qrCode2", Base64.encodeBase64String(data));
+				BASE64Encoder encoder=new BASE64Encoder();
+				dataMap.put("qrCode2", encoder.encode(data));
+//				dataMap.put("qrCode2", data.toString());
 			}
 
 			String savePath = filePath + dto1.getId()+ "-" + dto1.getName() +
